--- a/athenaawards105.html
+++ b/athenaawards105.html
@@ -16,7 +16,7 @@
 			<a href="athenaawards110.html">Boxed Pokemon</a>
 		</div><br><hr><br>
 		<div class="menu">
-			<a href="athenaawards 1.html">Log Out</a>
+			<a href="index.html">Log Out</a>
 		</div><br><hr><br>
 	</div>
 	<div class="main">
@@ -35,3 +35,4 @@
 </body>
 
 </html>
+
