--- a/athenaawards110.html
+++ b/athenaawards110.html
@@ -16,11 +16,12 @@
 			<a href="athenaawards110.html">Boxed Pokemon</a>
 		</div><br><hr><br>
 		<div class="menu">
-			<a href="athenaawards 1.html">Log Out</a>
+			<a href="index.html">Log Out</a>
 		</div><br><hr><br>
 	</div>
 	<div class="heading"><h1>BOX 1</h1></div>
 	<div class="boxed"><img src="assets/boxed.png"></div>
 </div>
 </body>
+
 </html>
