--- a/athenaawards105.html
+++ b/athenaawards105.html
@@ -20,19 +20,33 @@
 		</div><br><hr><br>
 	</div>
 	<div class="main">
-		<div class="swampert"><img src="assets/Swampert.png" alt="Swampert"><p>Tuffle</p></div>
-		<div class="crabominable"><img src="assets/Crabominable.png" alt="Crabominable"><p>Yeti</p></div>
-		<div class="xurkitree"><img src="assets/Xurkitree.png" alt="Xurkitree"><p>Wattsman</p></div>
-		<div class="gengar"><img src="assets/Gengar.png" alt="Gengar"><p>Queenston</p></div>
-		<div class="hydreigon"><img src="assets/Hydreigon.png" alt="Hydreigon"><p>Huey</p></div>
-		<div class="feraligatr"><img src="assets/Feraligatr.png" alt="Feraligatr"><p>Toto</p></div>
+		<div class="swampert">
+			<a href="https://pokemondb.net/pokedex/swampert" target="_blank"><img src="assets/Swampert.png" alt="Swampert"></a>
+			<p>Tuffle</p>
+		</div>
+		<div class="crabominable">
+			<a href="https://pokemondb.net/pokedex/crabominable" target="_blank"><img src="assets/Crabominable.png" alt="Crabominable"></a>
+			<p>Yeti</p>
+		</div>
+		<div class="xurkitree">
+			<a href="https://pokemondb.net/pokedex/xurkitree" target="_blank"><img src="assets/Xurkitree.png" alt="Xurkitree"></a>
+			<p>Wattsman</p>
+		</div>
+		<div class="gengar">
+			<a href="https://pokemondb.net/pokedex/gengar"target="_blank"><img src="assets/Gengar.png" alt="Gengar"></a>
+			<p>Queenston</p>
+		</div>
+		<div class="hydreigon">
+			<a href="https://pokemondb.net/pokedex/hydreigon" target="_blank"><img src="assets/Hydreigon.png" alt="Hydreigon"></a>
+			<p>Huey</p>
+		</div>
+		<div class="feraligatr">
+			<a href="https://pokemondb.net/pokedex/feraligatr" target="_blank"><img src="assets/Feraligatr.png" alt="Feraligatr"></a>
+			<p>Toto</p>
+		</div>
 	</div>
 </div>
-
-
-
-
 </body>
-
 </html>
+
 
